--- a/index.css
+++ b/index.css
@@ -52,7 +52,8 @@ a, a:hover, a:focus {
     left: 0;
     height: 100vh;
     z-index: 999;
-    background: #7386D5;
+    /*background: #7386D5;*/
+    background: #1e6789;
     color: #fff;
     transition: all 0.3s;
 }
@@ -63,7 +64,7 @@ a, a:hover, a:focus {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #6d7fcc;
+    background: #1e6789;
 }
 
 #sidebar ul.components {
@@ -82,13 +83,13 @@ a, a:hover, a:focus {
     display: block;
 }
 #sidebar ul li a:hover {
-    color: #7386D5;
+    color: #1e6789;
     background: #fff;
 }
 
 #sidebar ul li.active > a, a[aria-expanded="true"] {
-    color: #fff;
-    background: #6d7fcc;
+    color: #1e6789;
+    background: #fff;;
 }
 
 
@@ -112,7 +113,7 @@ a[aria-expanded="true"]::before {
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #6d7fcc;
+    background: #1e6789;
 }
 
 ul.CTAs {
