--- a/css/custom.css
+++ b/css/custom.css
@@ -1,2 +1,5 @@
 .bg-light { background-color: #f5f5f5;}
+.bg-dark {background-color: #dfdfdf;}
 .fill-vertical { min-height: 100%; height: 100%;}
+
+.nomargin {margin:0px;}
