--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,11 @@
 .bg-light { background-color: #f5f5f5;}
 .bg-dark {background-color: #dfdfdf;}
-.fill-vertical { min-height: 100%; height: 100%;}
+.fill-vertical { min-height: 100%; height: 100%; overflow: scroll;}
 
 .nomargin {margin:0px;}
+
+.shadow {
+    -webkit-box-shadow: 6px 2px 41px -19px rgba(0,0,0,0.50);
+    -moz-box-shadow: 6px 2px 41px -19px rgba(0,0,0,0.50);
+    box-shadow: 6px 2px 41px -19px rgba(0,0,0,0.50);
+}
